[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/animations/BasicEnemy1_anim/Sprite-0003.png" type="Texture" id=1]
[ext_resource path="res://assets/animations/BasicEnemy1_anim/Sprite-0004.png" type="Texture" id=2]
[ext_resource path="res://assets/animations/BasicEnemy1_anim/Sprite-0002.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/BasicEnemy1_anim/Sprite-0001.png" type="Texture" id=4]
[ext_resource path="res://scripts/Enemy1.gd" type="Script" id=5]
[ext_resource path="res://assets/animations/Explosion.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/new_space_mines/spark_01.png" type="Texture" id=7]
[ext_resource path="res://assets/animations/new_space_mines/spark_04.png" type="Texture" id=8]
[ext_resource path="res://assets/animations/new_space_mines/spark_03.png" type="Texture" id=9]
[ext_resource path="res://assets/animations/new_space_mines/spark_02.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=16]
radius = 15.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 864, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1056, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 232.002

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "sparky",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 23.0868

[node name="Enemy1" type="KinematicBody2D" groups=["enemy"]]
z_index = -20
z_as_relative = false
collision_layer = 2
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.172549, 0.937255, 0.0627451, 1 )
frames = SubResource( 1 )
playing = true

[node name="ExtinctionTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 0.576471, 0.941176, 0.533333, 1 )
scale = Vector2( 5, 5 )
frames = SubResource( 15 )
animation = "explode"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
max_speed = 55.0

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.408

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 2
monitoring = false

[node name="ExplodeCollisionShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1 )
shape = SubResource( 17 )

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="move_up_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Anim_sparky" type="AnimatedSprite" parent="."]
modulate = Color( 0.776471, 0.952941, 0.0431373, 1 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 18 )
animation = "sparky"
frame = 2
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.5, 1 )
scale = Vector2( 3.65, 3.7 )

[node name="Area2D_ForTesla" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_ForTesla"]
position = Vector2( -1, -1 )
shape = SubResource( 19 )
__meta__ = {
"_editor_description_": "Testing123"
}

[connection signal="timeout" from="ExtinctionTimer" to="." method="_on_ExtinctionTimer_timeout"]
[connection signal="timeout" from="NavTimer" to="." method="_on_NavTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="move_up_timer" to="." method="_on_move_up_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D_ForTesla" to="." method="_on_Area2D_ForTesla_area_entered"]
